<resources>
    <string name="app_name">VHA App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doctor">Doctor :%s</string>
    <string name="post">Post :%s</string>
    <string name="hospital">Hospital :%s</string>
    <string name="disease">You may have %s</string>
    <string name="severity">Severity :%s</string>
    <string name="who_are">Who are %s</string>
    <string name="mapbox_access_token">sk.eyJ1IjoibXVoYW1tYWRhbGlnaGFmZmFyIiwiYSI6ImNsMjZpeGI5aTBzaXgzZnFpYXg0ajh6cXcifQ.qRSSkL1i16PAOGcTrM-2jQ</string>


    <string name="patient_name">Name : %s</string>
    <string name="disease_name">Disease Name : %s</string>
    <string name="prediction_date">Prediction Date : %s</string>

    <string name="doctor_name">Doctor Name : %s</string>
    <string name="patient_name_appointment">Patient Name : %s</string>
    <string name="appointment_date">Appointment Date : %s</string>
    <string name="appointment_time">Appointment Time : %s</string>
</resources>