<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/bg_round"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/doctorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/doctor_name"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/patientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/patient_name_appointment"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/appointmentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/appointment_date"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/appointmentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/appointment_time"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/statusContainer"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_red_dark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="Status"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:text="Pending"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>